<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10sp"
        android:layout_marginVertical="10sp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hello_world"
            android:inputType="textPersonName"
            android:minHeight="48sp" />

        <Button
            android:id="@+id/BTN_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48sp"
            android:text="@string/insert_text" />

        <TextView
            android:id="@+id/textView_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/receive_text"
            android:minHeight="48sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BTN_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48sp"
                android:text="@string/to_second_window" />

            <Button
                android:id="@+id/BTN_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48sp"
                android:text="@string/to_third_window" />
        </LinearLayout>

        <Switch
            android:id="@+id/switch_flashlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:minHeight="48dp"
            android:text="@string/flashlight"
            android:textAlignment="textEnd" />
    </LinearLayout>
</RelativeLayout>