<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_second">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="50sp"
        android:layout_marginVertical="10sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_title_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_window_text"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/BTN_return_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:text="@string/return_text" />

        <Button
            android:id="@+id/BTN_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:text="@string/GetLocation"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receive_location"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>